# pizzeria

./: .env  .gitignore  README.md  docker-compose.yml
.devcontainer/: .env  devcontainer.json  docker-compose.yml
.devcontainer/src/: .p10k.zsh  .zshrc  Dockerfile
src/backend/pizzas/: Dockerfile  pyproject.toml
src/backend/pizzas/src/: env.py  main.py
src/backend/pizzas/src/controllers/: schemas.py  services.py  views.py
src/backend/pizzas/src/models/: db.py  models.py
src/backend/pizzas/tests/: test_pizzas.py
src/backend/users/: Dockerfile  pyproject.toml
src/backend/users/src/: main.py
src/backend/users/src/controllers/: schemas.py  services.py  views.py
src/backend/users/src/models/: models.py
src/backend/users/tests/: test_users.py
src/frontend/web/: .d.ts  Dockerfile  default-env.js  global.d.ts  next.config.ts  package.json  styles.js  tailwind.config.js  tsconfig.json
src/frontend/web/src/api/: api.ts  login.ts  pizzas.ts  profile.ts  register.ts
src/frontend/web/src/components/layout/Base/: Base.tsx  index.ts
src/frontend/web/src/components/layout/Button/: Button.tsx
src/frontend/web/src/components/layout/Container/: Container.tsx
src/frontend/web/src/contexts/ModalContext/: ModalContext.tsx  index.ts
src/frontend/web/src/contexts/PizzasContext/: PizzasContext.tsx  index.ts
src/frontend/web/src/contexts/ProfileContext/: ProfileContext.tsx  index.ts
src/frontend/web/src/pages/: _app.tsx  _document.tsx  index.tsx
src/frontend/web/src/styles/: base.scss
src/frontend/web/src/utils/: transformers.ts
(+22 files in other folders)
